Closed
Bug 827214
Opened 13 years ago
Closed 13 years ago
Actually convert HTML lists to WebIDL
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla21
People
(Reporter: bzbarsky, Assigned: bzbarsky)
References
Details
Attachments
(1 file)
12.87 KB,
patch
|
peterv
:
review+
akeybl
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
Bug 824823 didn't quite manage to convert HTML lists to WebIDL. We added the classes and so forth... but we didn't start creating instances of those objects!
Fixing that makes the firstChild test on Dromaeo faster, but lastChild is still being slow for some reason.
![]() |
Assignee | |
Comment 1•13 years ago
|
||
Attachment #698548 -
Flags: review?(peterv)
Comment 2•13 years ago
|
||
(In reply to Boris Zbarsky (:bz) from comment #0)
> Fixing that makes the firstChild test on Dromaeo faster, but lastChild is
> still being slow for some reason.
Possibly related: GetLastChild calls GetChildArray, which is virtual.
http://mxr.mozilla.org/mozilla-central/source/content/base/public/nsINode.h#1034
Comment 3•13 years ago
|
||
Comment on attachment 698548 [details] [diff] [review]
Fix HTML lists to really be webidl.
Review of attachment 698548 [details] [diff] [review]:
-----------------------------------------------------------------
Hah.
Attachment #698548 -
Flags: review?(peterv) → review+
![]() |
Assignee | |
Comment 4•13 years ago
|
||
> Possibly related: GetLastChild calls GetChildArray, which is virtual.
Oh! I'd totally forgotten that. We really need to finish that conversion. :( That might certainly explain part of what's going on there... But also, we're going through genericGetter for some reason, which can't possibly help. I still need to sort that out.
Try is green, so https://hg.mozilla.org/integration/mozilla-inbound/rev/557e0a6e3ca7
Flags: in-testsuite?
Target Milestone: --- → mozilla20
![]() |
Assignee | |
Updated•13 years ago
|
Target Milestone: mozilla20 → ---
![]() |
Assignee | |
Comment 5•13 years ago
|
||
Improvement: Mozilla-Inbound-Non-PGO - Dromaeo (DOM) - Win7 - 8.93% increase
![]() |
Assignee | |
Updated•13 years ago
|
![]() |
Assignee | |
Comment 7•13 years ago
|
||
Comment on attachment 698548 [details] [diff] [review]
Fix HTML lists to really be webidl.
Given bug 827516 we need this on Aurora 20, I think.
[Approval Request Comment]
Bug caused by (feature/regressing bug #): Bug 824823
User impact if declined: Assertion failures and possible security issues.
Testing completed (on m-c, etc.): Passes tests.
Risk to taking this patch (and alternatives if risky): Very low risk, I think.
The other option is to fully turn off the WebIDL bindings for lists, which
is doable if needed.
String or UUID changes made by this patch: None.
Attachment #698548 -
Flags: approval-mozilla-aurora?
![]() |
||
Comment 8•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla21
![]() |
||
Updated•13 years ago
|
Attachment #698548 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 9•13 years ago
|
||
status-firefox20:
--- → fixed
status-firefox21:
--- → fixed
![]() |
Assignee | |
Comment 10•13 years ago
|
||
I have verified that bug 827516 is also fixed on Aurora.
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•