Bug 827214.  Fix HTML lists to really be webidl.  r=peterv